// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`differentialExpressionReducer Sets error state on error action 1`] = `
Object {
  "comparison": Object {
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "type": "between",
  },
  "properties": Object {
    "cellSets": Object {},
    "comparisonType": null,
    "data": Array [],
    "error": "asd",
    "loading": false,
    "total": 0,
  },
}
`;

exports[`differentialExpressionReducer Sets loaded state on loaded action 1`] = `
Object {
  "comparison": Object {
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "type": "between",
  },
  "properties": Object {
    "cellSets": Object {
      "first": "louvain-0",
      "second": "louvain-1",
    },
    "comparisonType": undefined,
    "data": Array [
      Object {
        "gene_names": "A",
        "avg_log2FC": 3.45,
        "p_val": 1.16,
        "p_val_adj": 2.16,
      },
      Object {
        "gene_names": "B",
        "avg_log2FC": 4.45,
        "p_val": 2.16,
        "p_val_adj": 3.16,
      },
      Object {
        "gene_names": "C",
        "avg_log2FC": 5.45,
        "p_val": 3.16,
        "p_val_adj": 4.16,
      },
      Object {
        "gene_names": "D",
        "avg_log2FC": 6.45,
        "p_val": 4.16,
        "p_val_adj": 5.16,
      },
      Object {
        "gene_names": "E",
        "avg_log2FC": 7.45,
        "p_val": 5.16,
        "p_val_adj": 6.16,
      },
      Object {
        "gene_names": "F",
        "avg_log2FC": 8.45,
        "p_val": 6.16,
        "p_val_adj": 7.16,
      },
    ],
    "error": false,
    "loading": false,
    "total": 6,
  },
}
`;

exports[`differentialExpressionReducer Sets loading state on loading action 1`] = `
Object {
  "comparison": Object {
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "type": "between",
  },
  "properties": Object {
    "cellSets": Object {},
    "comparisonType": null,
    "data": Array [],
    "error": false,
    "loading": true,
    "total": 0,
  },
}
`;
